--- a/public/css/calendar.css
+++ b/public/css/calendar.css
@@ -95,35 +95,35 @@
             transform: translateY(-16.5px) rotate(-45deg); }
 
 hr {
-  width: 70%; }
+  width: 100%; }
 
 .calendar-title {
   text-align: center;
-  font-size: 2.2em;
-  color: #ffc000;
+  font-size: 2.7em;
+  color: black;
   margin-top: 7%;
-  font-weight: 600; }
+  font-weight: 100;
+  margin-bottom: -2%; }
 
 .calendar-text {
   width: 100%;
   text-align: center;
-  font-size: 2vh;
-  margin-top: 17%;
-  font-weight: bold; }
+  font-size: 2.8vh;
+  margin-top: 11%; }
 
-.month {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  text-align: center;
-  margin: 40px 0; }
+#text2 {
+  margin-top: -5%; }
 
-.navigator {
-  margin: 10px 0;
+.calendar-container {
+  margin: 5%;
+  width: 90%;
+  height: 52%;
+  background-color: #f0f0f0;
+  position: absolute;
+  border-radius: 20px; }
+
+.date-containar {
+  margin: 5% 0;
   width: 100%;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -136,63 +136,17 @@ hr {
           justify-content: center; }
 
 .pointer {
-  color: #ffc000;
-  font-size: 3.5em;
-  margin: 0 1em; }
+  margin: 0 auto;
+  font-size: 2.9vh; }
 
-#this-year, #this-month {
-  font-size: 2.2em;
-  color: #d7d7d2; }
+#previous-pointer {
+  margin-left: 10%; }
 
-#this-date {
-  font-size: 5.5em;
-  color: #2d2832;
-  padding: 1.5%; }
+#next-pointer {
+  margin-right: 10%; }
 
-.cal {
-  display: grid;
-  grid-template-areas: "corner weekdays" "weeks  month";
-  grid-template-rows: 1fr 7fr;
-  grid-template-columns: 1fr 5fr;
-  margin: 100px auto;
-  width: 90%;
-  height: 80%;
-  font-size: 3em;
-  text-align: center; }
-  .cal .week-label {
-    grid-area: corner;
-    color: #ffa51e;
-    font-size: 2.5rem; }
-  .cal .weeks {
-    grid-area: weeks;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
-    -ms-flex-pack: distribute;
-        justify-content: space-around;
-    color: #ffa51e;
-    font-size: 2.5rem; }
-  .cal .weekdays {
-    grid-area: weekdays;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -ms-flex-pack: distribute;
-        justify-content: space-around;
-    color: #2d2832;
-    font-size: 2.5rem; }
-  .cal .date {
-    grid-area: month;
-    display: grid;
-    grid-template-columns: repeat(7, 1fr);
-    grid-template-rows: repeat(5, 1fr);
-    color: #2d2832; }
-    .cal .date div {
-      height: 2em;
-      line-height: 2em; }
-      .cal .date div.inactive {
-        color: #d7d7d2; }
+.date {
+  margin: 0 auto;
+  width: 60%;
+  text-align: center;
+  font-size: 2.5vh; }
