--- a/views/week.hbs
+++ b/views/week.hbs
@@ -1,5 +1,7 @@
+
 {{#section 'head'}}
-  <script src="js/week.js" type="text/javascript"></script>
+{{!-- Tillfällig lösning för att ta static files --}}
+  <script src="../../../../js/week.js" type="text/javascript"></script>
   <link rel="stylesheet" href="/css/week.css">
 {{/section}}
 
@@ -10,11 +12,11 @@
     <div class="week-view-container">
       <div class="week-view-header">
         <div class="week-view-month">
-          December 2017, Sondag
+          {{#month_name month}}{{this}}{{/month_name}} 2018
         </div>
         <div class="week-view-days">
           <ul>
-            <h3 class="font-yellow">Uke</h3>
+            <h3 class="font-yellow">Uke {{weeknum}}</h3>
             {{#each daysstring}}
               <li>{{this}}</li>
             {{/each}}
