--- a/views/calendar.hbs
+++ b/views/calendar.hbs
@@ -1,6 +1,7 @@
+
 {{#section 'head'}}
   <link rel="stylesheet" href="/css/calendar.css">
-  <script src="js/calendar.js"></script>
+  <script src="/js/calendar.js"></script>
 {{/section}}
 
 {{#> layout }}
@@ -14,7 +15,7 @@
         <div class="list-cost">240kr</div>
       </div>
       <div class="image-container">
-        <img src="imgs/kid.jpg" alt="Søt unge">
+        <img src="/imgs/kid.jpg" alt="Søt unge">
       </div>
     </div>
   </div>
@@ -41,11 +42,11 @@
 
     <div class="calendar-container">
       <div class="date-containar">
-        <div class="pointer" id="previous-pointer">&#10094;</div>
+        <div class="pointer" id="previous-pointer" data-month={{month}}>&#10094;</div>
         <div class="date-head">
           <p>{{#month_name month}}{{this}}{{/month_name}} 2018</p><!--Sett in dato her-->
         </div>
-        <div class="pointer" id="next-pointer">&#10095;</div>
+        <div class="pointer" id="next-pointer" data-month={{month}}>&#10095;</div>
         </div>
 
         <div class = "cal">
