--- a/views/week.hbs
+++ b/views/week.hbs
@@ -1,7 +1,7 @@
 
 {{#section 'head'}}
 {{!-- Tillfällig lösning för att ta static files --}}
-  <script src="../../../../js/week.js" type="text/javascript"></script>
+  <script src="/js/week.js" type="text/javascript"></script>
   <link rel="stylesheet" href="/css/week.css">
 {{/section}}
 
@@ -20,9 +20,14 @@
             {{#each daysstring}}
               <li>{{this}}</li>
             {{/each}}
-            <h3 class="font-yellow">{{uke}}</h3>
-            {{#each daysnum}}
-              <li class="font-aubergine">{{this}}</li>
+            <h3 class="font-yellow">{{uke_num}}</h3>
+            {{#each days_arr}}
+              {{#condition this '==' ../chosen_day}}
+                <li class="font-yellow">{{this}}</li>
+              {{/condition}}
+              {{#condition this '!=' ../chosen_day}}
+                <li class="font-aubergine">{{this}}</li>
+              {{/condition}}
             {{/each}}
           </ul>
         </div>
