modified:   _sass/calendar.sass 	modified:   _sass/main.sass 	modified:   _sass/week.sass 	modified:   public/css/calendar.css 	modified:   public/css/main.css 	modified:   public/css/week.css 	new file:   public/imgs/icon/Chat.png 	new file:   public/imgs/icon/Handlekurv.png 	new file:   public/imgs/icon/Handleliste.png 	new file:   public/imgs/icon/Handlelister.png 	new file:   public/imgs/icon/Pil.png 	new file:   public/imgs/icon/Varer 2.png 	new file:   public/imgs/icon/Varer.png 	modified:   routes/calender.js 	new file:   routes/sok.js 	modified:   views/partials/Footer.hbs 	modified:   views/partials/headerplanner.hbs 	new file:   views/sok.hbs 	modified:   views/week.hbs

--- a/public/css/calendar.css
+++ b/public/css/calendar.css
@@ -118,7 +118,7 @@ hr {
   margin: 5%;
   width: 90%;
   height: 52%;
-  background-color: #f0f0f0;
+  background-color: #f0f0ec;
   position: absolute;
   border-radius: 20px; }
 
