--- a/views/partials/Footer.hbs
+++ b/views/partials/Footer.hbs
@@ -1,7 +1,8 @@
 <footer>
   <div class='handlekurv-menu'>
+    <img id="handlekurv-icon" src="/imgs/icon/Handlekurv.png" alt="">
     <p class='handlekurv-name'>Handlekurven er tom</p>
-    <p class='handlekurv-price'>399,-</p>
+    <p class='handlekurv-price'>kr 0,00</p>
   </div>
 
   <div class="nav-menu">
