--- a/_sass/calendar.sass
+++ b/_sass/calendar.sass
@@ -115,7 +115,7 @@ hr
   margin: 5%
   width: 90%
   height: 52%
-  background-color: rgb(240,240,240)
+  background-color: $Lys-varmgra
   position: absolute
   border-radius: 20px
 
