--- a/_sass/main.sass
+++ b/_sass/main.sass
@@ -22,7 +22,9 @@ body, html
   font-family: 'GT Walsheim Medium'
   margin: 0
   padding: 0
+  height: 88%
   background: $white
+
 
 footer
   background: #555
@@ -31,7 +33,7 @@ footer
   position: fixed
   bottom: 0
   width: 100%
-  height: 9%
+  height: 12%
 
   &.overlay
     filter: blur(3px)
@@ -47,11 +49,9 @@ footer
 
   .nav-menu
     display: flex
-    justify-content: space-between
-    padding: 0
+    justify-content: center
     margin: 0
     height: 70%
-    box-shadow: 0 15px 75px rgba(0,0,0,0.2)
     position: relative
     bottom: 0
 
@@ -59,10 +59,12 @@ footer
       display: block
       background: $Mork-aubergine
       text-align: center
-      font-size: 1.5em
-      line-height: 300%
+      align-content: center
+      justify-content: center
+      font-size: 2.0vh
+      line-height: 400%
       height: 100%
-      width: 19.5%
+      width: 20%
 
       &:hover
         background: $Varmgra
@@ -76,19 +78,28 @@ footer
     background: $Varmgra
     width: 100%
     top: 0
-    height: 30%
-    line-height: 200%
+    height: 40%
+    line-height: 220%
+
+    #handlekurv-icon
+      position: absolute
+      width: 1.2em
+      height: 1.2em
+      top: 20%
+      left: 0
+      margin-left: 5%
 
     .handlekurv-name
       position: absolute
-      left: 0
+      left: -10%
+
 
     .handlekurv-price
       position: absolute
       text-align: right
       padding: 0 10px
       width: 20%
-      right: 0
+      right: 3%
 
     p
       display: inline-block
@@ -112,14 +123,32 @@ footer
     grid-column: span 1
 
 .planner-grid
+  position: relative
+  margin-top: 3.5%
   display: grid
-  font-size: 2vh
+  font-size: 1.5vh
   text-align: center
 
   .planner-header
     display: inline-grid
     grid-row: 1
-    grid-template-columns: 1fr 3fr 1fr
+    grid-template-columns: 1fr 1fr 14fr 2fr 2fr
+    align-items: center
+    justify-content: center
+    border-bottom: 1px solid $Varmgra
+    padding-bottom: 2%
+
+    .img
+      width: 50%
+      height: 50%
+
+    .header-text
+      font-size: 2.7vh
+      margin-left: 10%
+
+    #pil-icon
+      height: 45%
+
 
     h1
       margin: .5em 0 .25em
