Changed visual route for months

--- a/views/partials/headerplanner.hbs
+++ b/views/partials/headerplanner.hbs
@@ -1,7 +1,7 @@
 {{#> layout }}
   <div class="planner-grid">
     <div class="planner-header">
-      <h1><</h1>
+      <h1 id="back-arrow" data-month="{{month}}"><</h1>
       <h1 class="font-yellow">Planlegger</h1>
       <h1>&#9881;</h1>
     </div>
