--- a/views/week.hbs
+++ b/views/week.hbs
@@ -20,7 +20,7 @@
               <li>{{this}}</li>
             {{/each}}
             <h3 class="this-week">{{uke}}</h3>
-            {{#each daysnum}}
+            {{#each days_arr}}
               <li>{{this}}</li>
             {{/each}}
           </ul>
