--- a/views/sok.hbs
+++ b/views/sok.hbs
@@ -1,5 +1,6 @@
+
 {{#section 'head'}}
-  <script src="js/week.js" type="text/javascript"></script>
+  <script src="/js/week.js" type="text/javascript"></script>
   <link rel="stylesheet" href="/css/week.css">
 {{/section}}
 
