Fixed glitch with kalender/:mon-:day

--- a/views/week.hbs
+++ b/views/week.hbs
@@ -19,7 +19,7 @@
             {{#each daysstring}}
               <li>{{this}}</li>
             {{/each}}
-            <h3 class="this-week">{{uke}}</h3>
+            <h3 class="this-week">{{uke_num}}</h3>
             {{#each days_arr}}
               <li>{{this}}</li>
             {{/each}}
