Functions added and names changed

--- a/views/partials/headerplanner.hbs
+++ b/views/partials/headerplanner.hbs
@@ -3,7 +3,7 @@
     <div class="planner-header">
 
       <span></span>
-      <img class="img" id="pil-icon" src="/imgs/icon/Pil.png" alt="" >
+      <img class="img" id="pil-icon" src="/imgs/icon/Pil.png" alt="" data-month="{{month}}">
       <h1 class="header-text">Handleliste</h1>
       <img class="img" id="chat-icon" src="/imgs/icon/Chat.png" alt="">
       <img class="img" id="handleliste-icon" src="/imgs/icon/Handleliste.png" alt="">
