--- a/views/week.hbs
+++ b/views/week.hbs
@@ -20,8 +20,13 @@
               <li>{{this}}</li>
             {{/each}}
             <h3 class="this-week">{{uke_num}}</h3>
-            {{#each days_arr}}
-              <li>{{this}}</li>
+            {{#each days_arr}} 
+              {{#condition this '==' ../chosen_day}} 
+                <li class="font-yellow" style="color: red" >{{this}}</li> 
+              {{/condition}} 
+              {{#condition this '!=' ../chosen_day}} 
+                <li class="font-aubergine btn-week-day" data-month="{{../month}}">{{this}}</li> 
+              {{/condition}} 
             {{/each}}
           </ul>
         </div>
