--- a/views/sok.hbs
+++ b/views/sok.hbs
@@ -25,11 +25,13 @@
           </ul>
         </div>
       </div>
+
+      <!--
       <div class="search-list">
         <h3 class="search-title">Varer</h3>
-        <div class="search-container">
+        <div class="search-container"> -->
           <!--Legg inn forstørrelsesglass-->
-          <p class="search-text">Søk i tusenvis av varer</p>
+          <!--<p class="search-text">Søk i tusenvis av varer</p>
         </div>
         <div class="categories">
           <li>Inspirasjon</li>
@@ -41,6 +43,7 @@
       </div>
       <div class="item-button" id="button-search">
         <img id="button-white" src="/imgs/icon/Varer 2.png" alt="">
-    </div>
+    </div> -->
+    {{> categories}}
   </div>
 {{/layout}}
