--- a/_sass/main.sass
+++ b/_sass/main.sass
@@ -152,3 +152,58 @@ footer
 
     h1
       margin: .5em 0 .25em
+
+  .category-container
+    position: fixed
+    margin: auto
+    height: 80vh
+    width: 92%
+    background-color: red
+
+  .information-view
+    position: relative
+    background-color: $white
+    height: 60vh
+    margin: 0 auto
+    width: 99.2%
+    top: 2vh
+    border-bottom-left-radius:  15px
+    border-bottom-right-radius: 15px
+
+  .search-title
+    position: relative
+    z-index: 2
+    font-size: 2.6vh
+
+  .search-container
+    position: relative
+    margin: 0 auto
+    height: 5vh
+    width: 90%
+    background-color: $Lys-varmgra
+    border-radius: 40px
+
+   .search-t
+     position: relative
+     text-align: left
+     color: yellow
+
+  .categories
+    position: relative
+    margin-top: 10%
+    height: 72%
+    list-style: none
+    font-size: 2.5vh
+    overflow: scroll
+    display: grid
+    grid-template-rows: repeat(1, 7fr)
+
+  .categories li
+    display: flex
+    position: relative
+    margin: 0 auto
+    align-items: center
+    width: 90%
+    text-align: left
+    height: 7vh
+    border-bottom: 1px solid $Varmgra
