--- a/_sass/week.sass
+++ b/_sass/week.sass
@@ -78,7 +78,9 @@ li#vare
   grid-template-columns: repeat(8, 1fr)
   grid-template-rows: repeat(2, 1fr)
 
-.search-list
+
+
+//.search-list
   position: relative
   background-color: $white
   height: 82.7%
@@ -88,7 +90,7 @@ li#vare
   border-bottom-left-radius:  15px
   border-bottom-right-radius: 15px
 
-#button-search
+//#button-search
   width: 23%
   height: 14%
   background-color: $white
@@ -98,20 +100,20 @@ li#vare
   top: -94%
   border-radius: 50%
 
-#button-white
+//#button-white
   position: relative
   margin-top: 13%
   width: 60%
   height: 47%
 
-.search-title
+//.search-title
   position: relative
   z-index: 2
   top: 9%
   margin-top: 10%
   font-size: 2.6vh
 
-.search-container
+//.search-container
   position: relative
   margin: 0 auto
   top: 7%
@@ -121,7 +123,7 @@ li#vare
   border-radius: 40px
   font-size: 2.3vh
 
-.search-text
+//.search-text
   position: relative
   text-align: left
   margin-left: 10%
@@ -129,7 +131,7 @@ li#vare
   color: grey
 
 
-.categories
+//.categories
   position: relative
   margin-top: 10%
   height: 72%
@@ -140,7 +142,7 @@ li#vare
   grid-template-rows: repeat(1, 7fr)
 
 
-.categories li
+//.categories li
   display: flex
   position: relative
   margin: 0 auto
