--- a/views/partials/categories.hbs
+++ b/views/partials/categories.hbs
@@ -1,8 +1,8 @@
 
 <div class="category-container">
-<!--  <div class="icon-b">
+  <div class="icon-button">
     <img id="button-white" src="/imgs/icon/Varer 2.png" alt="">
-  </div> -->
+  </div>
   <div class="information-view">
     <h3 class="search-title">Varer</h3>
     <div class="search-container">
