Changes to be committed: 	new file:   _sass/button.sass 	new file:   _sass/categories.sass 	modified:   _sass/main.sass 	modified:   _sass/week.sass 	new file:   public/css/button.css 	new file:   public/css/categories.css 	modified:   public/css/main.css 	new file:   public/imgs/icon/Filter.png 	new file:   public/imgs/icon/Kryss ut.png 	new file:   public/imgs/icon/Legg til bilde .png 	new file:   public/imgs/icon/Legg til personer.png 	new file:   public/imgs/icon/Slette handlelister.png 	new file:   "public/imgs/icon/V-gra\314\212.png" 	new file:   public/imgs/icon/V-lilla.png 	new file:   public/imgs/icon/Velg vare.png 	new file:   public/imgs/icon/Velge hvor mangen varer.png 	modified:   routes/calender.js 	modified:   views/calendar.hbs 	modified:   views/partials/categories.hbs 	deleted:    views/sok.hbs 	modified:   views/week.hbs

--- a/views/partials/categories.hbs
+++ b/views/partials/categories.hbs
@@ -1,3 +1,6 @@
+{{#section 'head'}}
+  <link rel="stylesheet" href="/css/categories.css">
+{{/section}}
 
 <div class="category-container">
   <div class="icon-button">
