Changes to be committed: 	new file:   _sass/product-item.sass 	new file:   public/css/product-item.css 	modified:   routes/calender.js 	modified:   views/partials/categories.hbs 	new file:   views/partials/product-item.hbs produkter har blitt en egen partial

--- a/views/partials/categories.hbs
+++ b/views/partials/categories.hbs
@@ -13,11 +13,13 @@
       <p class="search-t">Søk i tusenvis av varer</p>
     </div>
     <div class="categories">
+      <!--
       <li>Inspirasjon</li>
       <li>Dine Varer</li>
       {{#each categories}}
         <li data-categoryId = {{this.id}}>{{this.name}}</li>
-      {{/each}}
+      {{/each}} -->
+        {{> product-item}}
     </div>
   </div>
   </div>
