--- a/_sass/footer.sass
+++ b/_sass/footer.sass
@@ -1,4 +1,5 @@
 @import "./imports/colors.sass"
+
 footer
   background: #555
   color: $Varmgra
@@ -7,6 +8,11 @@ footer
   bottom: 0
   width: 100%
   height: 12%
+  display: grid
+  grid: 0.85fr 1.15fr / 1fr
+  
+  p
+    margin: 0
 
   &.overlay
     filter: blur(3px)
@@ -19,64 +25,42 @@ footer
     &:visited
       color: $Varmgra
       text-decoration: none
+    
+  .footer-menu
+    position: relative
+    width: 100%
+    display: grid
+    grid: 1fr / repeat(3, auto)
+    background: $Varmgra
+    color: $sort-aubergine
+    align-items: center
+
+    #handlekurv-icon
+      margin: 10px
+
+    .footer-text-output
+      position: absolute
+      left: 5%
+    
+    .footer-price
+      position: absolute
+      right: 5%
 
   .nav-menu
-    display: flex
-    justify-content: center
-    margin: 0
-    height: 70%
-    position: relative
-    bottom: 0
+    width: 100%
+    display: grid
+    text-align: center
+    grid: 1fr / repeat(5, 1fr)
+    background: $sort-aubergine
 
     a
-      display: block
-      background: $Mork-aubergine
-      text-align: center
-      align-content: center
-      justify-content: center
-      font-size: 2.0vh
-      line-height: 400%
+      width: 100%
       height: 100%
-      width: 20%
+      transition: 200ms all
+      vertical-align: middle
+      line-height: 400%
+      font-size: 2.0vh
 
       &:hover
         background: $Varmgra
         color: $Mork-aubergine
-
-  .handlekurv-menu *, .handlekurv-menu
-
-  .handlekurv-menu
-    position: relative
-    box-shadow: 0 15px 75px rgba(0,0,0,0.2)
-    background: $Varmgra
-    width: 100%
-    top: 0
-    height: 40%
-    line-height: 220%
-
-    #handlekurv-icon
-      position: absolute
-      width: 1.2em
-      height: 1.2em
-      top: 20%
-      left: 0
-      margin-left: 5%
-
-    .handlekurv-name
-      position: absolute
-      left: -10%
-
-
-    .handlekurv-price
-      position: absolute
-      text-align: right
-      padding: 0 10px
-      width: 20%
-      right: 3%
-
-    p
-      display: inline-block
-      width: 80%
-      padding: 0 10px
-      margin: 0
-      color: $sort-aubergine
