--- a/public/css/footer.css
+++ b/public/css/footer.css
@@ -5,7 +5,11 @@ footer {
   position: fixed;
   bottom: 0;
   width: 100%;
-  height: 12%; }
+  height: 12%;
+  display: grid;
+  grid: 0.85fr 1.15fr / 1fr; }
+  footer p {
+    margin: 0; }
   footer.overlay {
     -webkit-filter: blur(3px);
             filter: blur(3px); }
@@ -16,61 +20,38 @@ footer {
     footer a:visited {
       color: #d7d7d2;
       text-decoration: none; }
-  footer .nav-menu {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-    margin: 0;
-    height: 70%;
+  footer .footer-menu {
     position: relative;
-    bottom: 0; }
+    width: 100%;
+    display: grid;
+    grid: 1fr/repeat(3, auto);
+    background: #d7d7d2;
+    color: #2d2832;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center; }
+    footer .footer-menu #handlekurv-icon {
+      margin: 10px; }
+    footer .footer-menu .footer-text-output {
+      position: absolute;
+      left: 5%; }
+    footer .footer-menu .footer-price {
+      position: absolute;
+      right: 5%; }
+  footer .nav-menu {
+    width: 100%;
+    display: grid;
+    text-align: center;
+    grid: 1fr/repeat(5, 1fr);
+    background: #2d2832; }
     footer .nav-menu a {
-      display: block;
-      background: #413746;
-      text-align: center;
-      -ms-flex-line-pack: center;
-          align-content: center;
-      -webkit-box-pack: center;
-          -ms-flex-pack: center;
-              justify-content: center;
-      font-size: 2.0vh;
-      line-height: 400%;
+      width: 100%;
       height: 100%;
-      width: 20%; }
+      -webkit-transition: 200ms all;
+      transition: 200ms all;
+      vertical-align: middle;
+      line-height: 400%;
+      font-size: 2.0vh; }
       footer .nav-menu a:hover {
         background: #d7d7d2;
         color: #413746; }
-  footer .handlekurv-menu {
-    position: relative;
-    -webkit-box-shadow: 0 15px 75px rgba(0, 0, 0, 0.2);
-            box-shadow: 0 15px 75px rgba(0, 0, 0, 0.2);
-    background: #d7d7d2;
-    width: 100%;
-    top: 0;
-    height: 40%;
-    line-height: 220%; }
-    footer .handlekurv-menu #handlekurv-icon {
-      position: absolute;
-      width: 1.2em;
-      height: 1.2em;
-      top: 20%;
-      left: 0;
-      margin-left: 5%; }
-    footer .handlekurv-menu .handlekurv-name {
-      position: absolute;
-      left: -10%; }
-    footer .handlekurv-menu .handlekurv-price {
-      position: absolute;
-      text-align: right;
-      padding: 0 10px;
-      width: 20%;
-      right: 3%; }
-    footer .handlekurv-menu p {
-      display: inline-block;
-      width: 80%;
-      padding: 0 10px;
-      margin: 0;
-      color: #2d2832; }
