--- a/views/partials/Footer.hbs
+++ b/views/partials/Footer.hbs
@@ -1,8 +1,10 @@
 <footer>
-  <div class='handlekurv-menu'>
-    <img id="handlekurv-icon" src="/imgs/icon/Handlekurv.png" alt="">
-    <p class='handlekurv-name'>Handlekurven er tom</p>
-    <p class='handlekurv-price'>kr 0,00</p>
+  <div class='footer-menu'>
+    <p class='footer-text-output'>
+      <img id="handlekurv-icon" src="/imgs/icon/Handlekurv.png" alt="">
+      Handlekurven er tom</p>
+      <span></span>
+    <p class='footer-price'>kr 0,00</p>
   </div>
 
   <div class="nav-menu">
