--- a/public/css/categories.css
+++ b/public/css/categories.css
@@ -1,9 +1,12 @@
 .category-container {
-  position: fixed;
-  top: 22.1vh;
-  margin-left: 4%;
+  position: absolute;
+  top: 100vh;
   height: 80vh;
-  width: 92%; }
+  width: 100%;
+  -webkit-transition: all 700ms ease-in-out;
+  transition: all 700ms ease-in-out; }
+  .category-container .show {
+    top: 22.1vh; }
 
 .information-view {
   position: relative;
@@ -18,6 +21,7 @@
 
 .search-title {
   position: relative;
+  text-align: center;
   top: 2.5vh;
   z-index: 2;
   font-size: 2.3vh; }
@@ -64,15 +68,30 @@
   border-bottom: 1px solid #d7d7d2; }
 
 .icon-button {
+  position: absolute;
+  left: 50%;
+  -webkit-transform: translateX(-50%);
+          transform: translateX(-50%);
+  top: -39vh;
   width: 10vh;
   height: 10vh;
-  margin: 0 auto;
-  background-color: white;
-  border-radius: 50%; }
+  background-color: #ffa51e;
+  border-radius: 50%;
+  z-index: 2; }
+  .icon-button .show {
+    background-color: white;
+    top: -10vh; }
 
 #button-white {
-  position: relative;
-  margin-top: 1.8vh;
-  width: 6vh;
-  height: 4.3vh;
-  z-index: 2; }
+  position: absolute;
+  left: 2vh;
+  top: 1vh;
+  width: 50%;
+  height: 40%; }
+
+#add-product-button {
+  position: absolute;
+  left: 1vh;
+  top: 1.5vh;
+  height: 60%;
+  width: 70%; }
