--- a/views/partials/categories.hbs
+++ b/views/partials/categories.hbs
@@ -1,10 +1,14 @@
 {{#section 'head'}}
   <link rel="stylesheet" href="/css/categories.css">
+  <script type="text/javascript" src="/js/category.js">
+
+  </script>
 {{/section}}
 
 <div class="category-container">
   <div class="icon-button">
-    <img id="button-white" src="/imgs/icon/Varer 2.png" alt="">
+    <img id="button-white" src="/imgs/icon/AddProductBlack.png" alt="">
+    <img id="add-product-button" src="/imgs/icon/AddProductWhite.png" alt="">
   </div>
   <div class="information-view">
     <h3 class="search-title">Varer</h3>
@@ -21,6 +25,5 @@
       {{/each}} -->
         {{> product-item}}
     </div>
-  </div>
   </div>
 </div>
