Expand modularity with footer

--- a/_sass/calendar.sass
+++ b/_sass/calendar.sass
@@ -92,8 +92,6 @@
 hr
   width: 100%
 
-
-
 .calendar-title
   text-align: center
   font-size: 2.7em
@@ -108,8 +106,8 @@ hr
   font-size: 2.8vh
   margin-top: 11%
 
-#text2
-  margin-top: -5%
+  p
+    margin: 0 auto
 
 .calendar-container
   margin: 5%
