--- a/_sass/footer.sass
+++ b/_sass/footer.sass
@@ -36,15 +36,15 @@ footer
     align-items: center
 
     #handlekurv-icon
-      margin: 10px
+      margin: auto 10px
 
     .footer-text-output
       position: absolute
-      left: 5%
+      left: 25px
     
     .footer-price
       position: absolute
-      right: 5%
+      right: 25px
 
   .nav-menu
     width: 100%
