--- a/public/css/calendar.css
+++ b/public/css/calendar.css
@@ -110,9 +110,8 @@ hr {
   text-align: center;
   font-size: 2.8vh;
   margin-top: 11%; }
-
-#text2 {
-  margin-top: -5%; }
+  .calendar-text p {
+    margin: 0 auto; }
 
 .calendar-container {
   margin: 5%;
