--- a/_sass/categories.sass
+++ b/_sass/categories.sass
@@ -6,10 +6,10 @@
   //vises ved 22.1
   height: 80vh
   width: 100%
-  transition: all 700ms ease-in-out
+  transition: all 300ms ease-in-out
 
-  .show
-    top: 22.1vh
+.show
+  top: 22.1vh
 
 .information-view
   position: relative
@@ -45,6 +45,9 @@
   left: 7vh
   color: grey
   font-size: 2.2vh
+  border: 0
+  &:active
+    border: 0
 
 .categories
   position: relative
@@ -55,6 +58,7 @@
   overflow: scroll
   display: grid
   grid-template-rows: repeat(1, 7fr)
+
 
 .categories li
   display: flex
@@ -76,23 +80,35 @@
   background-color: $eggeplomme
   border-radius: 50%
   z-index: 2
+  transition: all 300ms ease-in-out
 
-  .show
-    background-color: $white
-    top: -10vh
+.change-button
+  background-color: $white
+  top: -10vh
 
 
-#button-white
+.button-white
   position: absolute
   left: 2vh
   top: 1vh
   width: 50%
   height: 40%
+  opacity: 0
+
+.show-button
+  opacity: 1
 
 
-#add-product-button
+.add-product-button
   position: absolute
   left: 1vh
   top: 1.5vh
   height: 60%
   width: 70%
+  opacity: 1
+
+.hide-button
+  opacity: 0
+
+.changeButton
+  display: none
