--- a/public/css/categories.css
+++ b/public/css/categories.css
@@ -3,10 +3,11 @@
   top: 100vh;
   height: 80vh;
   width: 100%;
-  -webkit-transition: all 700ms ease-in-out;
-  transition: all 700ms ease-in-out; }
-  .category-container .show {
-    top: 22.1vh; }
+  -webkit-transition: all 300ms ease-in-out;
+  transition: all 300ms ease-in-out; }
+
+.show {
+  top: 22.1vh; }
 
 .information-view {
   position: relative;
@@ -41,7 +42,10 @@
   text-align: left;
   left: 7vh;
   color: grey;
-  font-size: 2.2vh; }
+  font-size: 2.2vh;
+  border: 0; }
+  .search-t:active {
+    border: 0; }
 
 .categories {
   position: relative;
@@ -77,21 +81,35 @@
   height: 10vh;
   background-color: #ffa51e;
   border-radius: 50%;
-  z-index: 2; }
-  .icon-button .show {
-    background-color: white;
-    top: -10vh; }
+  z-index: 2;
+  -webkit-transition: all 300ms ease-in-out;
+  transition: all 300ms ease-in-out; }
 
-#button-white {
+.change-button {
+  background-color: white;
+  top: -10vh; }
+
+.button-white {
   position: absolute;
   left: 2vh;
   top: 1vh;
   width: 50%;
-  height: 40%; }
+  height: 40%;
+  opacity: 0; }
 
-#add-product-button {
+.show-button {
+  opacity: 1; }
+
+.add-product-button {
   position: absolute;
   left: 1vh;
   top: 1.5vh;
   height: 60%;
-  width: 70%; }
+  width: 70%;
+  opacity: 1; }
+
+.hide-button {
+  opacity: 0; }
+
+.changeButton {
+  display: none; }
