--- a/views/partials/categories.hbs
+++ b/views/partials/categories.hbs
@@ -7,23 +7,23 @@
 
 <div class="category-container">
   <div class="icon-button">
-    <img id="button-white" src="/imgs/icon/AddProductBlack.png" alt="">
-    <img id="add-product-button" src="/imgs/icon/AddProductWhite.png" alt="">
+    <img class="button-white" src="/imgs/icon/AddProductBlack.png" alt="">
+    <img class="add-product-button" src="/imgs/icon/AddProductWhite.png" alt="">
   </div>
   <div class="information-view">
     <h3 class="search-title">Varer</h3>
     <div class="search-container">
       <!--Legg inn forstørrelsesglass-->
-      <p class="search-t">Søk i tusenvis av varer</p>
+      <input type="text" class="search-t" onkeyup="myFunction()" placeholder="Søk i tusenvis av varer">
     </div>
     <div class="categories">
-      <!--
-      <li>Inspirasjon</li>
-      <li>Dine Varer</li>
-      {{#each categories}}
-        <li data-categoryId = {{this.id}}>{{this.name}}</li>
-      {{/each}} -->
-        {{> product-item}}
+      <ul class="category-list">
+        <li>Inspirasjon</li>
+        <li>Dine Varer</li>
+        {{#each categories}}
+          <li class="list-item" data-categoryid={{this.id}}>{{this.name}}</li>
+        {{/each}}
+      </ul>
     </div>
   </div>
 </div>
