--- a/views/partials/product-item.hbs
+++ b/views/partials/product-item.hbs
@@ -1,12 +1,13 @@
+
 {{#section 'head'}}
   <link rel="stylesheet" href="/css/product-item.css">
 {{/section}}
 
 <div class="product-container">
-  <img id="product-image" src="{{product.images.0.thumbnail.url}}" alt="">
-  <h1 id="product-name">{{product.name.base}}</h1>
+  <img id="product-image" src="{{product.images.thumbnail}}" alt="">
+  <h1 id="product-name">{{product.name}}</h1>
   <h1 id="price-per-unit">kr {{product.price.gross}}</h1>
   <img id="add-button" src="/imgs/icon/Velg vare.png" alt="">
-  <h2 id="price-som">{{product.price.unit_quantity_name}}</h2>
-  <h2 id="price-quantity">kr {{product.price.gross_unit}}/{{product.price.unit_quantity_abbreviation}}</h2>
+  <span></span>
+  <h2 id="price-quantity">kr {{product.price.gross_unit}}</h2>
 </div>
