Search function working

--- a/_sass/categories.sass
+++ b/_sass/categories.sass
@@ -38,7 +38,7 @@
   background-color: $Lys-varmgra
   border-radius: 40px
 
-.search-t
+#search-t
   position: relative
   top: 0.7vh
   text-align: left
