--- a/views/partials/categories.hbs
+++ b/views/partials/categories.hbs
@@ -14,7 +14,7 @@
     <h3 class="search-title">Varer</h3>
     <div class="search-container">
       <!--Legg inn forstørrelsesglass-->
-      <input type="text" class="search-t" onkeyup="myFunction()" placeholder="Søk i tusenvis av varer">
+      <input type="text" id="search-t" onkeyup="searchTerm()" placeholder="Søk i tusenvis av varer">
     </div>
     <div class="categories">
       <ul class="category-list">
