new file:   _sass/amount-buttons.sass 	modified:   _sass/categories.sass 	modified:   _sass/product-item.sass 	new file:   public/css/amount-buttons.css 	modified:   public/css/categories.css 	modified:   public/css/product-item.css 	modified:   public/css/week.css 	renamed:    public/imgs/icon/Velge hvor mangen varer.png -> public/imgs/icon/NumbersOfItems.png 	modified:   public/js/category.js 	new file:   views/partials/amount-buttons.hbs

--- a/public/css/categories.css
+++ b/public/css/categories.css
@@ -48,7 +48,8 @@
     border: 0; }
 
 .categories {
-  position: relative;
+  position: absolute;
+  width: 100%;
   margin-top: 2vh;
   height: 47vh;
   list-style: none;
