Updating burgermenu for viewing shoppinglists

--- a/views/calendar.hbs
+++ b/views/calendar.hbs
@@ -6,26 +6,7 @@
 
 {{#> layout }}
 
-  <div class="shadow"></div>
-  <div class="side-overlay">
-    <div class="shoppinglist-box">
-      <div class="list-info">
-        <div class="list-date">22.12.17</div>
-        <div class="list-name">Julie 5 år!</div>
-        <div class="list-cost">240kr</div>
-      </div>
-      <div class="image-container">
-        <img src="/imgs/kid.jpg" alt="Søt unge">
-      </div>
-    </div>
-  </div>
-
-  <div class="burger">
-    <!--legg inn ikon-->
-    <div></div>
-    <div></div>
-    <div></div>
-  </div>
+{{> burger}}
 
   <div class="container">
     <div class="calendar-title">
