--- a/_sass/main.sass
+++ b/_sass/main.sass
@@ -1,6 +1,7 @@
 @import "./imports/colors.sass"
 @import "./footer.sass"
 @import "./header.sass"
+@import "./burger.sass"
 
 @font-face
   font-family: 'GT Walsheim Regular'
