--- a/public/css/main.css
+++ b/public/css/main.css
@@ -85,6 +85,87 @@ footer {
     .planner-grid .planner-header h1 {
       margin: .5em 0 .25em; }
 
+.shadow {
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background: #333;
+  opacity: 0;
+  z-index: 999;
+  -webkit-transition: 300ms ease-in-out;
+  transition: 300ms ease-in-out;
+  pointer-events: none; }
+  .shadow.show {
+    opacity: 0.05; }
+
+.side-overlay {
+  position: fixed;
+  height: 100%;
+  width: 59%;
+  background: white;
+  border-left: 1px solid #d7d7d2;
+  top: 0;
+  right: -59%;
+  z-index: 1000;
+  -webkit-transition: right 500ms ease-in-out;
+  transition: right 500ms ease-in-out; }
+  .side-overlay .burger-choice {
+    display: grid;
+    grid: auto/repeat(2, 1fr);
+    text-align: center; }
+    .side-overlay .burger-choice h2 {
+      margin: 0 10%;
+      font-size: 1.7em;
+      border: 2px solid #f0f0ec; }
+  .side-overlay.show {
+    right: 0; }
+
+.shoppinglist-container {
+  width: 90%;
+  margin: 0 auto; }
+  .shoppinglist-container .burger-title {
+    margin: 10%; }
+
+.container.overlay {
+  -webkit-filter: blur(3px);
+          filter: blur(3px); }
+
+.burger {
+  height: 50px;
+  width: 70px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  position: absolute;
+  top: 60px;
+  right: 60px;
+  font-size: 1em;
+  color: #2d2832;
+  z-index: 2000; }
+  .burger div {
+    width: 100%;
+    height: 7px;
+    background: #2d2832;
+    border-radius: 3px;
+    -webkit-transition: 300ms ease-in-out;
+    transition: 300ms ease-in-out; }
+  .burger.close div:nth-child(2) {
+    opacity: 0; }
+  .burger.close div:nth-child(1) {
+    -webkit-transform: translateY(16.5px) rotate(45deg);
+            transform: translateY(16.5px) rotate(45deg); }
+  .burger.close div:nth-child(3) {
+    -webkit-transform: translateY(-16.5px) rotate(-45deg);
+            transform: translateY(-16.5px) rotate(-45deg); }
+
 @font-face {
   font-family: 'GT Walsheim Regular';
   src: url("../fonts/GT-Walsheim-Regular.ttf");
