--- a/public/css/burger.css
+++ b/public/css/burger.css
@@ -28,18 +28,16 @@
     display: grid;
     grid: auto/repeat(2, 1fr);
     text-align: center; }
-    .side-overlay .burger-choice h2 {
-      margin: 0 10%;
-      font-size: 1.7em;
-      border: 2px solid #f0f0ec; }
+  .side-overlay h2 {
+    margin: 0 10%;
+    font-size: 1.7em;
+    border: 2px solid #f0f0ec; }
   .side-overlay.show {
     right: 0; }
 
 .shoppinglist-container {
   width: 90%;
   margin: 0 auto; }
-  .shoppinglist-container .burger-title {
-    margin: 10%; }
 
 .container.overlay {
   -webkit-filter: blur(3px);
