MiCleaned up commented css files.

--- a/_sass/header.sass
+++ b/_sass/header.sass
@@ -8,7 +8,7 @@
   grid: 12% / repeat(8, 1fr)
   text-align: center
   grid-gap: 2.5%
-  grid-template-areas: ". . . . . . . ." "pil . text text text text chat handleliste"
+  grid-template-areas: "pil . text text text text chat handleliste"
 
   img
     height: 100%
@@ -30,32 +30,3 @@
   #handleliste-icon
     grid-area: handleliste
     margin: 0 auto
-
-// .planner-grid
-//   position: relative
-//   margin-top: 3.5%
-//   display: grid
-//   font-size: 1.5vh
-//   text-align: center
-
-//   .planner-header
-//     display: inline-grid
-//     grid-row: 1
-//     grid-template-columns: 1fr 1fr 14fr 2fr 2fr
-//     align-items: center
-//     justify-content: center
-//     border-bottom: 1px solid $Varmgra
-//     padding-bottom: 2%
-
-//     .img
-//       width: 100%
-      
-//     .header-text
-//       font-size: 2.7vh
-//       margin-left: 10%
-
-//     #pil-icon
-//       height: 45%
-
-//     h1
-//       margin: .5em 0 .25em
