--- a/public/css/header.css
+++ b/public/css/header.css
@@ -5,7 +5,7 @@
   grid: 12%/repeat(8, 1fr);
   text-align: center;
   grid-gap: 2.5%;
-  grid-template-areas: ". . . . . . . ." "pil . text text text text chat handleliste"; }
+  grid-template-areas: "pil . text text text text chat handleliste"; }
   .planner-grid img {
     height: 100%;
     width: auto; }
