--- a/public/css/product-item.css
+++ b/public/css/product-item.css
@@ -8,6 +8,8 @@
   grid-template-rows: 50% 50%;
   grid-template-areas: "prodImg name pricePerUnit iconImg" "prodImg description price iconImg";
   border-bottom: 1px solid #d7d7d2; }
+  .product-container img {
+    width: 100%; }
 
 h1 {
   font-size: 2.1vh;
