--- a/_sass/week.sass
+++ b/_sass/week.sass
@@ -33,10 +33,9 @@
   height: 82.7%
   margin: 0 auto
   width: 99.2%
+  position: relative
   border-bottom-left-radius:  15px
   border-bottom-right-radius: 15px
-  display: grid
-  grid-template-columns: repeat(1, 5fr)
   overflow: scroll
 
 li#vare
