--- a/views/week.hbs
+++ b/views/week.hbs
@@ -3,6 +3,7 @@
 {{!-- Tillfällig lösning för att ta static files --}}
   <script src="/js/week.js" type="text/javascript"></script>
   <link rel="stylesheet" href="/css/week.css">
+  <link rel="stylesheet" href="/css/product-list-item.css">
 {{/section}}
 
 {{#> layout }}
@@ -32,11 +33,9 @@
         </div>
       </div>
       <div class="week-list">
-        <div class="list-item">
-          {{#each daysstring}}
-            <li id="vare">{{this}}</li>
-          {{/each}}
-        </div>
+        {{#each list.products}}
+          {{> product-list-item this }}
+        {{/each}}
       </div>
       {{> categories}}
     </div>
