Updating week view to see which day you are on

--- a/_sass/week.sass
+++ b/_sass/week.sass
@@ -69,3 +69,21 @@ li#vare
   width: 100%
   grid-template-columns: repeat(8, 1fr)
   grid-template-rows: repeat(2, 1fr)
+
+.chosen-day
+  color: white
+  position: relative
+  z-index: 2
+
+  &::after
+    content: ''
+    position: absolute
+    background: $Mork-aubergine
+    width: 90%
+    height: 100%
+    bottom: 0
+    left: 50%
+    z-index: -1
+    margin: 0 auto
+    transform: translateX(-50%)
+    border-radius: 5px
