Changes to be committed: 	modified:   _sass/categories.sass 	modified:   _sass/week.sass 	modified:   helpers/helpers.js 	modified:   public/css/categories.css 	modified:   public/css/week.css 	modified:   public/js/category.js 	modified:   views/calendar.hbs 	modified:   views/partials/categories.hbs

--- a/views/calendar.hbs
+++ b/views/calendar.hbs
@@ -73,11 +73,9 @@
           <div class = "date">
             {{!-- Takes in year and month --}}
             {{#calendar 2018 month}}
-                <div data-month={{../month}} data-day="{{this.day}}" class="active calendar-btn {{#condition this.day '==' ../today}}today{{/condition}} {{#contains ../shoppinglistdates this.date}}has-list{{/contains}}">
-                  {{this.day}}
-                </div>
+                <div data-month={{../month}} data-day="{{this.day}}" class="active calendar-btn {{#condition this.day '==' ../today}}today{{/condition}} {{#contains ../shoppinglistdates this.date}}has-list{{/contains}}">{{this.day}}</div>
             {{/calendar}}
-              
+
           </div>
         </div>
     </div>
