--- a/public/css/categories.css
+++ b/public/css/categories.css
@@ -12,13 +12,27 @@
 .information-view {
   position: relative;
   background-color: white;
-  height: 60.9vh;
+  height: 60vh;
   margin: 0 auto;
   width: 99%;
   top: -7.5vh;
   border-bottom-left-radius: 15px;
   border-bottom-right-radius: 15px;
   overflow: hidden; }
+
+.information-header {
+  width: 100%;
+  height: 10vh;
+  display: grid;
+  grid-template-columns: 15vh auto 15vh;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center; }
+
+.back-arrow {
+  position: relative;
+  margin-left: 3.5vh;
+  height: 3vh; }
 
 .search-title {
   position: relative;
