--- a/views/partials/categories.hbs
+++ b/views/partials/categories.hbs
@@ -11,7 +11,10 @@
     <img class="add-product-button" src="/imgs/icon/AddProductWhite.png" alt="">
   </div>
   <div class="information-view">
-    <h3 class="search-title">Varer</h3>
+    <div class="information-header">
+      <img class="back-arrow" src="/imgs/icon/Pil.png" alt="">
+      <h3 class="search-title">Varer</h3>
+    </div>
     <div class="search-container">
       <!--Legg inn forstørrelsesglass-->
       <input type="text" id="search-t" onkeyup="searchTerm()" placeholder="Søk i tusenvis av varer">
