--- a/_sass/product-list-item.sass
+++ b/_sass/product-list-item.sass
@@ -31,8 +31,9 @@
 
   #price
     grid-area: price
-    font-size: 1.5em
     margin: 0
+    color: $Varmgra
+    font-size: 1.5em
     line-height: 2em
 
   #quantity-block
@@ -42,4 +43,8 @@
     align-items: center
     
     #amount
+      background: none
+      border: none
+      width: 100%
+      text-align: center
       font-size: 2em
