--- a/views/week.hbs
+++ b/views/week.hbs
@@ -2,6 +2,7 @@
 {{#section 'head'}}
 {{!-- Tillfällig lösning för att ta static files --}}
   <script src="/js/week.js" type="text/javascript"></script>
+  <script src="/js/shoppinglist.js" type="text/javascript"></script>
   <link rel="stylesheet" href="/css/week.css">
   <link rel="stylesheet" href="/css/product-list-item.css">
 {{/section}}
