--- a/_sass/categories.sass
+++ b/_sass/categories.sass
@@ -24,22 +24,23 @@
 
 .information-header
   width: 100%
-  height: 10vh
+  margin-top: 3vh
+  height: 6vh
   display: grid
   grid-template-columns: 15vh auto 15vh
   align-items: center
 
+.information-event-header
+  margin-top: 10vh
+
 .back-arrow
   position: relative
   margin-left: 3.5vh
-  height: 3vh
-
-
+  height: 2.5vh
 
 .search-title
   position: relative
   text-align: center
-  top: 2.5vh
   z-index: 2
   font-size: 2.3vh
 
@@ -51,6 +52,11 @@
   width: 90%
   background-color: $Lys-varmgra
   border-radius: 40px
+  font-size: 2.2vh
+  opacity: 1
+
+.hide-search-container
+  opacity: 0
 
 #search-t
   position: relative
@@ -58,10 +64,35 @@
   text-align: left
   left: 7vh
   color: grey
-  font-size: 2.2vh
   border: 0
   &:active
     border: 0
+
+.inspiration-container
+  position: relative
+  margin: 0 auto
+  width: 90%
+  font-size: 2.2vh
+  opacity: 0
+
+.inspiration-container-show
+  opacity: 1
+
+.inspiration-border
+  position: relative
+  display: grid
+  grid-template-columns: repeat(5, 5fr)
+  grid-gap: 2.5vh
+  list-style: none
+  overflow-x: scroll
+
+.inspiration-border li
+  border: $Lys-varmgra 3px solid
+  padding: 1vh
+  border-radius: 25px
+
+.selected-inspiration-border
+  background-color: $Lys-varmgra
 
 .categories
   position: absolute
@@ -73,6 +104,9 @@
   overflow: scroll
   display: grid
   grid-template-rows: repeat(1, 7fr)
+
+.inspiration-categories
+  margin-top: -7vh
 
 .categories li
   display: flex
